--- a/public/about.html
+++ b/public/about.html
@@ -1,5 +1,5 @@
   <head>
-    <title>Public API Explorer - About</title>
+    <title>USA Brewery - About</title>
     <style>
       body {
         margin: 0;
@@ -61,7 +61,7 @@
         Loading...
       </ul>
     </section>
-    <footer>&copy; 2025 Public API Explorer</footer>
+    <footer>&copy; 2025 Brewery API</footer>
 
     <script>
       async function loadSampleBreweries() {
