--- a/public/brewery.html
+++ b/public/brewery.html
@@ -1,5 +1,5 @@
   <head>
-    <title>Public API Explorer - Breweries (Voice Search)</title>
+    <title>USA Brewery - Breweries (Voice Search)</title>
     <style>
       body {
         margin: 0;
@@ -132,7 +132,7 @@
         <canvas id="typeChart"></canvas>
       </div>
     </div>
-    <footer>&copy; 2025 Public API Explorer</footer>
+    <footer>&copy; 2025 Brewery API</footer>
 
     <script>
 
