--- a/public/home.html
+++ b/public/home.html
@@ -74,7 +74,7 @@
       <h2>Featured Brewery</h2>
       <div id="featured">Loading...</div>
     </section>
-    <footer>&copy; 2025 Public API Brewery Explorer</footer>
+    <footer>&copy; 2025 Brewery API</footer>
 
     <script>
 
